Complete ProductController unit test coverage